Fix bug: dictionary left panel on small displays jumps up and down

--- a/assets/scss/zerotohero.scss
+++ b/assets/scss/zerotohero.scss
@@ -1028,8 +1028,6 @@ button.bg-primary:focus {
     flex-wrap: nowrap;
     .content-pane-left {
       width: 21rem;
-      height: 100vh;
-      position: sticky;
       top: 2.5rem;
     }
     .content-pane-right {
